k8s/04-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: task-api
  labels:
    app: redis
    app.kubernetes.io/part-of: task-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server", "--maxmemory", "64mb", "--maxmemory-policy", "allkeys-lru"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: task-api
  labels:
    app: redis
    app.kubernetes.io/part-of: task-api
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
